--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <a href="https://www.linkedin.com/in/ankesh-shukla-002077336" target="_blank">
             <i class="fab fa-linkedin"></i> LinkedIn
           </a>
-          <a href="mailto:example@example.com">
+          <a href="mailto:shuklaankesh28@gmail.com">
             <i class="fas fa-envelope"></i> Email
           </a>
         </div>
@@ -187,3 +187,4 @@
 
 </body>
 </html>
+
