--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ankesh | Sci-Fi Portfolio</title>
+  <title>Ankesh  Portfolio</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -13,7 +13,7 @@
 
   <div id="loader">
     <div class="loader-text">INITIALIZING SYSTEM...</div>
-    <div class="loader-text" style="font-size:1.2rem; margin-top:10px;">WELCOME, ANKESH</div>
+    <div class="loader-text" style="font-size:1.2rem; margin-top:10px;">WELCOME</div>
     <div class="loader-bar">
       <div class="loader-progress"></div>
     </div>
@@ -187,4 +187,3 @@
 
 </body>
 </html>
-
